fixes category badges alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -75,10 +75,6 @@ $twitter:          #00aced;
     width: 100%;
 }
 
-.badges {
-    display: inline;
-}
-
 .post-link {
     display: inline;
 }
